--- a/public/auth/css/avisos/app.css
+++ b/public/auth/css/avisos/app.css
@@ -1408,7 +1408,7 @@ header .notifications-menu ul.dropdown-menu li ul li a i {
     top: 0;
     right: 0;
     float: none;
-    background: #d2d6de;
+    /* background: #d2d6de; */
     padding-left: 10px;
   }
   .breadcrumb a {
