--- a/public/app/assets_pedidos/listado.css
+++ b/public/app/assets_pedidos/listado.css
@@ -157,3 +157,12 @@
     padding: 12px;
     border-radius: 8px 8px 0 0;
 }
+
+#tableCompras thead th {
+    background-color: #272727;
+    color: #fff;
+    font-weight: 600;
+    text-align: left;
+    padding: 12px;
+    border-radius: 8px 8px 0 0;
+}
