--- a/public/app/assets_pedidos/listado.css
+++ b/public/app/assets_pedidos/listado.css
@@ -101,7 +101,8 @@
 .estado-pedido {
     padding: 5px 10px;
     border-radius: 25px;
-    color: #fff;
+    background: #2d338c;
+    color: white;
     font-weight: 600;
     text-transform: uppercase;
     display: inline-flex;
@@ -165,4 +166,16 @@
     text-align: left;
     padding: 12px;
     border-radius: 8px 8px 0 0;
+}
+
+.btn-ver-compra {
+    border-radius: 8px;
+    padding: 6px 10px;
+    transition: all 0.2s ease;
+}
+
+.btn-ver-compra:hover {
+    background-color: #5864ff;
+    color: #fff;
+    transform: scale(1.05);
 }
